    + copyright-refers-to-symlink-license
    + init.d-script-does-not-source-init-functions
  * Switch Vcs-* headers to GitHub
  * Add Elmar to Uploaders.
  * Bump debhelper compatibility to 9.
    + Update versioned debhelper build-dependency accordingly.
  * Revamp debian/rules:
    + No more clean stamp files manually, done by dh_clean already
    + Use dh_auto_{build,install,clean}
  * Apply wrap-and-sort.

 -- Axel Beckert <abe@debian.org>  Mon, 11 Feb 2013 18:34:32 +0100

dphys-swapfile (20100506~current-1) experimental; urgency=low

  * New upstream snapshot
    - uses dc instead of expr, so depend on dc
    - All patches introduced in the previous upload have been accepted by
      upstream (partially being improved, too) within a day and therefore
      been removed from the package. Thanks, Neil!
      + remove build dependency on quilt, too.
    - Fixed spelling error in previous changelog entry.
  * Bump Standards-Version to 3.9.1 (no changes)

 -- Axel Beckert <abe@debian.org>  Fri, 11 Feb 2011 16:21:47 +0100

dphys-swapfile (20061020-4) unstable; urgency=low

  * Fix wrong magnitude in last upload's bugfix for 564466 when
    calculating swap size. (Closes: #612877, LP: #706764) Thanks Antonio
    Galea <antonio.galea@gmail.com> for a very unintrusive patch.

 -- Axel Beckert <abe@debian.org>  Fri, 11 Feb 2011 14:40:33 +0100

dphys-swapfile (20061020-3) unstable; urgency=low

  * New maintainer
  * Removed patch which removed the swapfile size limit (#502200). Without
    this patch, the problem described in #564466 wouldn't have been so
    harmful as it is.
  * Updated homepage URL
  * Moved to quilt patch management. New patches:
    - adapt-source-code-comments-and-output.diff
    - check-for-empty-or-zero-maxswap.diff
    - use-meminfo-instead-of-kcore.diff (Closes: #564466)
    - fix-spelling-errors.diff (fixes lintian warnings)
  * Bumped standards version to 3.8.4 (no changes necessary)
  * Added Vcs-* headers
  * Added debian/source/format