@@ -20,6 +20,7 @@ dphys-swapfile (20100506-1) UNRELEASED; urgency=low
   * Revamp debian/rules:
     + No more clean stamp files manually, done by dh_clean already
     + Use dh_auto_{build,install,clean}
+    + Finally switch to a minimal dh7 style debian/rules file
   * Apply wrap-and-sort.
 
  -- Axel Beckert <abe@debian.org>  Mon, 11 Feb 2013 18:34:32 +0100
